# glue-shell

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  command.hpp  crew.cpp  make.sh
data/cmake/: cmake.env  cmake.sh
data/hello/: greet.env  greet.sh
src/app/: CMakeLists.txt  crew-repl.cpp  crew.cpp
src/lib/: CMakeLists.txt  command.cpp  interpreter.cpp  module.cpp  util.cpp
src/lib/common/: CMakeLists.txt  command.cpp  interpreter.cpp  module.cpp  util.cpp
src/lib/common/include/common/: command.hpp  util.hpp
src/lib/common/test/: CMakeLists.txt  test_command.cpp  test_module.cpp
src/lib/include/: command.hpp  interpreter.hpp  module.hpp  util.hpp
src/lib/terminal/: CMakeLists.txt  terminal.cpp
src/lib/terminal/include/terminal/: terminal.hpp
src/lib/test/: CMakeLists.txt  test_command.cpp  test_module.cpp
